@@ -1,2 +1,3 @@
 # Library_Manager
 A library management system built with JavaFX, designed to track book inventory, sales, and customer purchases.
+Must add JavaFX library in Java project and configure vm with '--module-path "C:\JavaFX\javafx-sdk-24\lib" --add-modules javafx.controls,javafx.fxml'
